# YouTube-Frame-Extractor

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  tests.yml
docs/: contributing.md  index.md  installation.md  mkdocs.yml
docs/api-reference/: analysis.md  config.md  extractors.md  storage.md
examples/: basic_extraction.py  batch_processing.py  vlm_analysis.py
examples/notebooks/: advanced_analysis.ipynb  quickstart.ipynb
src/youtube_frame_extractor/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logger.py
src/youtube_frame_extractor/analysis/: __init__.py  clip.py  object_detection.py  ocr.py  vlm.py
src/youtube_frame_extractor/extractors/: __init__.py  base.py  browser.py  download.py
src/youtube_frame_extractor/storage/: __init__.py  cloud.py  local.py
src/youtube_frame_extractor/utils/: __init__.py  browser.py  concurrency.py  image.py  video.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_integration.py
tests/test_analysis/: __init__.py  test_clip.py  test_object_detection.py  test_ocr.py
tests/test_extractors/: __init__.py  test_browser_extractor.py  test_download_extractor.py
tests/test_utils/: __init__.py  test_browser.py  test_concurrency.py  test_image.py  test_video.py
